{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 35,
  "lineage": "80d91fd8-02a5-1b5c-740a-9290a0b48c4e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "primepath_nat_gateway_eip-az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae8d03d3df788d07",
            "arn": "arn:aws:ec2:us-east-1:891612584616:elastic-ip/eipalloc-0ae8d03d3df788d07",
            "domain": "vpc",
            "id": "eipalloc-0ae8d03d3df788d07",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-70-143-112.compute-1.amazonaws.com",
            "public_ip": "52.70.143.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "primepath_project_nat_gateway_eip-az1a"
            },
            "tags_all": {
              "Name": "primepath_project_nat_gateway_eip-az1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "primepath_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b86aaed8ef90e45f",
            "arn": "arn:aws:ec2:us-east-1:891612584616:instance/i-03ffd093f1a01bc90",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ffd093f1a01bc90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Patty--",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0899c5bede15af296",
            "private_dns": "ip-10-0-1-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-13-218-23-112.compute-1.amazonaws.com",
            "public_ip": "13.218.23.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ee2c4decb57b25ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076a80dc8668b3220",
            "tags": {
              "Name": "Primepath Web Server"
            },
            "tags_all": {
              "Name": "Primepath Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0262bd6140380c24a"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_security_group.alb_security_group",
            "aws_security_group.primepath_web_sg",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "primepath_project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:internet-gateway/igw-0930289ccff2c5775",
            "id": "igw-0930289ccff2c5775",
            "owner_id": "891612584616",
            "tags": {
              "Name": "primepath igw"
            },
            "tags_all": {
              "Name": "primepath igw"
            },
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "dependencies": [
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891612584616:loadbalancer/app/app-lb/8a9802b14191d2f1",
            "arn_suffix": "app/app-lb/8a9802b14191d2f1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-1727480647.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891612584616:loadbalancer/app/app-lb/8a9802b14191d2f1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f856077dbcdb60a9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-076a80dc8668b3220"
              },
              {
                "subnet_id": "subnet-09bb206b5f06bd829"
              }
            ],
            "subnets": [
              "subnet-076a80dc8668b3220",
              "subnet-09bb206b5f06bd829"
            ],
            "tags": {
              "Environment": "production",
              "Name": "application_loadbalancer_primepath"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "application_loadbalancer_primepath"
            },
            "vpc_id": "vpc-0b8d9f6c5af702399",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_security_group.alb_security_group",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_subnet.primepath_project_public_subnet-az1b",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891612584616:listener/app/app-lb/8a9802b14191d2f1/f066e2e065f80930",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891612584616:listener/app/app-lb/8a9802b14191d2f1/f066e2e065f80930",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891612584616:loadbalancer/app/app-lb/8a9802b14191d2f1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_lb.alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_subnet.primepath_project_public_subnet-az1b",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891612584616:listener/app/app-lb/8a9802b14191d2f1/a5e6839821fe0dc8",
            "certificate_arn": "arn:aws:acm:us-east-1:891612584616:certificate/ca0df317-5b8e-43be-b567-5fb447ffa205",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891612584616:targetgroup/primepath-tg/d3d6e6e3ba6750e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891612584616:listener/app/app-lb/8a9802b14191d2f1/a5e6839821fe0dc8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891612584616:loadbalancer/app/app-lb/8a9802b14191d2f1",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ssl_certificate",
            "aws_internet_gateway.primepath_project_igw",
            "aws_lb.alb",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_subnet.primepath_project_public_subnet-az1b",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891612584616:targetgroup/primepath-tg/d3d6e6e3ba6750e3",
            "arn_suffix": "targetgroup/primepath-tg/d3d6e6e3ba6750e3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891612584616:targetgroup/primepath-tg/d3d6e6e3ba6750e3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "primepath-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "dependencies": [
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "primepath_web_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891612584616:targetgroup/primepath-tg/d3d6e6e3ba6750e3-20250517141803516100000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891612584616:targetgroup/primepath-tg/d3d6e6e3ba6750e3",
            "target_id": "i-03ffd093f1a01bc90"
          },
          "dependencies": [
            "aws_instance.primepath_web",
            "aws_internet_gateway.primepath_project_igw",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb_security_group",
            "aws_security_group.primepath_web_sg",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "primepath_nat_gateway-az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae8d03d3df788d07",
            "association_id": "eipassoc-029fc4ca3d99e68e8",
            "connectivity_type": "public",
            "id": "nat-046b42c2c18a04c6f",
            "network_interface_id": "eni-02c2d3aa30d9864e5",
            "private_ip": "10.0.1.157",
            "public_ip": "52.70.143.112",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-076a80dc8668b3220",
            "tags": {
              "Name": "primepath_project_nat_gateway-az1a"
            },
            "tags_all": {
              "Name": "primepath_project_nat_gateway-az1a"
            }
          },
          "dependencies": [
            "aws_eip.primepath_nat_gateway_eip-az1a",
            "aws_internet_gateway.primepath_project_igw",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "primepath_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:route-table/rtb-0d3daffef8ca47b0f",
            "id": "rtb-0d3daffef8ca47b0f",
            "owner_id": "891612584616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-046b42c2c18a04c6f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for Private Subnets"
            },
            "tags_all": {
              "Name": "Route Table for Private Subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.primepath_nat_gateway_eip-az1a",
            "aws_internet_gateway.primepath_project_igw",
            "aws_nat_gateway.primepath_nat_gateway-az1a",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "primepath_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:route-table/rtb-05ade69339d3beb51",
            "id": "rtb-05ade69339d3beb51",
            "owner_id": "891612584616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0930289ccff2c5775",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for Public Subnets"
            },
            "tags_all": {
              "Name": "Route Table for Public Subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044adb7ba7ee7c311",
            "route_table_id": "rtb-0d3daffef8ca47b0f",
            "subnet_id": "subnet-019a0d928bb1f33d2"
          },
          "dependencies": [
            "aws_eip.primepath_nat_gateway_eip-az1a",
            "aws_internet_gateway.primepath_project_igw",
            "aws_nat_gateway.primepath_nat_gateway-az1a",
            "aws_route_table.primepath_private_rt",
            "aws_subnet.primepath_project_private_app_subnet-az1a",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097990b680a3281e3",
            "route_table_id": "rtb-0d3daffef8ca47b0f",
            "subnet_id": "subnet-046bc3bd4378bef5d"
          },
          "dependencies": [
            "aws_eip.primepath_nat_gateway_eip-az1a",
            "aws_internet_gateway.primepath_project_igw",
            "aws_nat_gateway.primepath_nat_gateway-az1a",
            "aws_route_table.primepath_private_rt",
            "aws_subnet.primepath_project_private_app_subnet-az1b",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f937f2fbc9932122",
            "route_table_id": "rtb-0d3daffef8ca47b0f",
            "subnet_id": "subnet-0541b01f3c820d507"
          },
          "dependencies": [
            "aws_eip.primepath_nat_gateway_eip-az1a",
            "aws_internet_gateway.primepath_project_igw",
            "aws_nat_gateway.primepath_nat_gateway-az1a",
            "aws_route_table.primepath_private_rt",
            "aws_subnet.primepath_project_private_db_subnet-az1a",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f7a1dabbff8ce2d",
            "route_table_id": "rtb-0d3daffef8ca47b0f",
            "subnet_id": "subnet-0917b266400952bd2"
          },
          "dependencies": [
            "aws_eip.primepath_nat_gateway_eip-az1a",
            "aws_internet_gateway.primepath_project_igw",
            "aws_nat_gateway.primepath_nat_gateway-az1a",
            "aws_route_table.primepath_private_rt",
            "aws_subnet.primepath_project_private_db_subnet-az1b",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067d007620eca7ee5",
            "route_table_id": "rtb-05ade69339d3beb51",
            "subnet_id": "subnet-076a80dc8668b3220"
          },
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_route_table.primepath_public_rt",
            "aws_subnet.primepath_project_public_subnet-az1a",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0e57b96a7db22ae",
            "route_table_id": "rtb-05ade69339d3beb51",
            "subnet_id": "subnet-09bb206b5f06bd829"
          },
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_route_table.primepath_public_rt",
            "aws_subnet.primepath_project_public_subnet-az1b",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:security-group/sg-0f856077dbcdb60a9",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f856077dbcdb60a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "891612584616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB Security Group"
            },
            "tags_all": {
              "Name": "ALB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primepath_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:security-group/sg-0262bd6140380c24a",
            "description": "Allow Internet access to the web server http port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0262bd6140380c24a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP access from the Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f856077dbcdb60a9"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPs access from the Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f856077dbcdb60a9"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "primepath_web_sg",
            "name_prefix": "",
            "owner_id": "891612584616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server Security Group"
            },
            "tags_all": {
              "Name": "Web Server Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primepath_project_private_app_subnet-az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:subnet/subnet-019a0d928bb1f33d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019a0d928bb1f33d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612584616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primepath_project_private_app_subnet-az1a"
            },
            "tags_all": {
              "Name": "primepath_project_private_app_subnet-az1a"
            },
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primepath_project_private_app_subnet-az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:subnet/subnet-046bc3bd4378bef5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046bc3bd4378bef5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612584616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primepath_project_private_app_subnet-az1b"
            },
            "tags_all": {
              "Name": "primepath_project_private_app_subnet-az1b"
            },
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primepath_project_private_db_subnet-az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:subnet/subnet-0541b01f3c820d507",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0541b01f3c820d507",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612584616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primepath_project_private_db_subnet-az1a"
            },
            "tags_all": {
              "Name": "primepath_project_private_db_subnet-az1a"
            },
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primepath_project_private_db_subnet-az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:subnet/subnet-0917b266400952bd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0917b266400952bd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612584616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primepath_project_private_db_subnet-az1b"
            },
            "tags_all": {
              "Name": "primepath_project_private_db_subnet-az1b"
            },
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primepath_project_public_subnet-az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:subnet/subnet-076a80dc8668b3220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076a80dc8668b3220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891612584616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primepath_project_public_subnet-az1a"
            },
            "tags_all": {
              "Name": "primepath_project_public_subnet-az1a"
            },
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primepath_project_public_subnet-az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:subnet/subnet-09bb206b5f06bd829",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bb206b5f06bd829",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891612584616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primepath_project_public_subnet-az1b"
            },
            "tags_all": {
              "Name": "primepath_project_public_subnet-az1b"
            },
            "vpc_id": "vpc-0b8d9f6c5af702399"
          },
          "dependencies": [
            "aws_internet_gateway.primepath_project_igw",
            "aws_vpc.primepath_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primepath_project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612584616:vpc/vpc-0b8d9f6c5af702399",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03557f3b8473a58e3",
            "default_route_table_id": "rtb-0abbc698ac56058a0",
            "default_security_group_id": "sg-08c23816efb684a56",
            "dhcp_options_id": "dopt-00cfc26fb0ba4a7b3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8d9f6c5af702399",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abbc698ac56058a0",
            "owner_id": "891612584616",
            "tags": {
              "Name": "primepath vpc"
            },
            "tags_all": {
              "Name": "primepath vpc"
            }
          }
        }
      ]
    }
  ]
}